--- a/.github/workflows/run_sbt_test_on_push.yaml
+++ b/.github/workflows/run_sbt_test_on_push.yaml
@@ -5,9 +5,14 @@ on:
   pull_request:
     types:
       - opened
+      - synchronize
+    paths:
+      - 'src/**'
   push:
     branches:
       - main
+    paths:
+      - 'src/**'
 
 jobs:
   deploy:
