--- a/.github/workflows/run_sbt_test_on_push.yaml
+++ b/.github/workflows/run_sbt_test_on_push.yaml
@@ -21,7 +21,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
+
+      - name: Start database by docker compose up
+        run: |
+          docker compose -f docker-compose.dev.yml up db
+
+      - name: Wait on database
+        run: |
+          sleep 15
+
       - name: Run sbt test 
         id: run-sbt-test
         run: |
