--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - DB_URL=jdbc:postgresql://db:5432/mydb
+      - DB_URL=jdbc:postgresql:authentication
       - DB_USER=postgres
       - DB_PASSWORD=password
     depends_on:
@@ -18,7 +18,9 @@ services:
     image: postgres:15-alpine
     ports:
       - "5432:5432"
+    volumes:
+      - ./docker/postgres/sql:/docker-entrypoint-initdb.d
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=mydb
+      - POSTGRES_DB=authentication
