ログ設定を追加し、Repository層でエラーログを出力するようにした

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,13 @@
+application {
+  logging {
+    // FIXME 環境変数がない場合のデフォルト値をいい感じに設定したい
+    dir = "./logs"
+    dir = ${?LOG_DIR}
+    level = "INFO"
+    level = ${?LOG_LEVEL}
+  }
+}
+
 database {
   postgres {
     url = ${?DB_URL}
