--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,6 +14,7 @@ services:
       - DB_PASSWORD=password
     depends_on:
       - db
+    profiles: ["app"]
   db:
     image: postgres:15-alpine
     ports:
@@ -24,3 +25,13 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=authentication
+    profiles: ["database"]
+  db_migrate:
+    build:
+      context: ./docker/migrate
+      dockerfile: ./Dockerfile-migrate.dev
+    depends_on:
+      - db
+    # docker composeで起動時は開発用途なので migrate up で良い、運用時は command の arguments を調整することで down や up 1 などで何を適用するか決定する
+    command: ["-database", "postgres://postgres:password@db:5432/authentication?sslmode=disable", "-path", "/migrations/", "up"]
+    profiles: ["database"]
