--- a/.github/workflows/run_sbt_test_on_push.yaml
+++ b/.github/workflows/run_sbt_test_on_push.yaml
@@ -44,7 +44,7 @@ jobs:
       
       - name: Start database by docker compose up
         run: |
-          docker compose -f docker-compose.dev.yml up db -d
+          docker compose -f docker-compose.dev.yml --profile database up -d
 
       - name: Set up java
         uses: actions/setup-java@v3
