--- a/docker/migrate/Dockerfile-migrate.dev
+++ b/docker/migrate/Dockerfile-migrate.dev
@@ -6,5 +6,6 @@ ARG DATABASE_URL
 ENV DATABASE_URL=${DATABASE_URL}
 
 ADD entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
 ENTRYPOINT ["./entrypoint.sh"]
