起動コマンド整えて、readmeを記述

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -23,7 +23,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=authentication
-    profiles: ["database"]
+    volumes:
+      - db_data:/var/lib/postgresql/data
   db_migrate:
     build:
       context: ./docker/migrate
@@ -32,4 +33,8 @@ services:
       - db
     # docker composeで起動時は開発用途なので migrate up で良い、運用時は command の arguments を調整することで down や up 1 などで何を適用するか決定する
     command: ["-database", "postgres://postgres:password@db:5432/authentication?sslmode=disable", "-path", "/migrations/", "up"]
-    profiles: ["database"]
+    profiles: ["migration"]
+
+volumes:
+  db_data:
+
