--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,5 +1,5 @@
 # ベースイメージ
-FROM openjdk:19-jdk-alpine3.16
+FROM amazoncorretto:20-alpine3.18
 
 ARG SBT_VERSION=1.8.2
 
@@ -22,4 +22,4 @@ RUN sbt -V
 EXPOSE 8080
 
 # アプリケーションを実行
-CMD ["sbt", "~reStart"]
+CMD ["sbt", "run"]
