macだと~reStartが効いたので、dockerで開発するように変更

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,9 +12,9 @@ services:
       - DB_URL=jdbc:postgresql:authentication
       - DB_USER=postgres
       - DB_PASSWORD=password
+      - PORT=8080
     depends_on:
       - db
-    profiles: ["app"]
   db:
     image: postgres:15-alpine
     ports:
